<resources>
    <string name="app_name">Latin Reader</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_drawer_library">Library</string>
    <string name="nav_drawer_translations">Translations</string>
    <string name="nav_drawer_dictionary">Dictionary</string>
    <string name="nav_drawer_vocab">Vocabulary</string>
    <string name="nav_drawer_help">Help</string>

    <string name="action_settings">Settings</string>
    <string name="action_dictionary">Dictionary</string>

    <string name="pref_text_size">Text Size</string>
    <string name="pref_text_size_summary">Change the size of the text on the reading page.</string>
    <string name="pref_text_size_default">20</string>
    <string name="pref_poem_lines">Poem Lines Per Page</string>
    <string name="pref_poem_lines_summary">Change the number of poem lines shown on the reading page.</string>
    <string name="pref_poem_lines_default">5</string>

    <string name="dictionary_query_hint">Enter word to look up</string>
    <string name="dictionary_query_hint_short">Lookup word</string>
    <string name="dictionary_query_no_results">No results found.</string>
    <string name="dictionary_query_submit">Search</string>

    <string name="error_activity">Error</string>
    <string name="error_activity_title">I\'m really sorry - there was an error</string>
    <string name="error_activity_explanation">Something bad happened and the app needs to close. The information below shows the gnarly details.</string>
    <string name="default_error_message">No details to show.</string>

    <string name="context_menu_translation">Show translation</string>
    <string name="context_menu_source">Show source text</string>
</resources>
